log
Thu 16 Mar 2023 11:12:18 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:69:29: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |   local = (Vector *) calloc(local,sizeof(Vector));
      |                             ^~~~~
      |                             |
      |                             Vector *
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘Vector *’
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c602089
Thu 16 Mar 2023 11:12:42 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:50:11: error: ‘p’ undeclared (first use in this function)
   50 |    return p;
      |           ^
exercises.c:50:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘crearVector’:
exercises.c:68:29: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   68 |   local = (Vector *) calloc(local,sizeof(Vector));
      |                             ^~~~~
      |                             |
      |                             Vector *
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘Vector *’
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0884298
Thu 16 Mar 2023 11:13:31 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:50:11: error: ‘p’ undeclared (first use in this function)
   50 |    return p;
      |           ^
exercises.c:50:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
18ff476
Thu 16 Mar 2023 11:13:55 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
3227630
Thu 16 Mar 2023 11:33:05 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
cb92b3c
Thu 16 Mar 2023 11:37:58 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
b97a0e9
Fri 17 Mar 2023 12:18:09 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
78a240d
Fri 17 Mar 2023 12:20:26 AM UTC: 
 exercises.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  3|4
total_score: 30/70
9a73ba0
Fri 17 Mar 2023 12:28:35 AM UTC: 
 exercises.c | 23 ++++++++++-------------
 1 file changed, 10 insertions(+), 13 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:8: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   29 |     min=a[0];
      |        ^
exercises.c:32:14: error: comparison between pointer and integer [-Werror]
   32 |       if(a[k]>(max))
      |              ^
exercises.c:33:14: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   33 |         (max)=a[k];
      |              ^
exercises.c:34:14: error: comparison between pointer and integer [-Werror]
   34 |       if(a[k]<(min))
      |              ^
cc1: all warnings being treated as errors
Compilation failed
b3f675e
Fri 17 Mar 2023 12:29:05 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
d808d40
Fri 17 Mar 2023 12:30:06 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
e6e05b2
Fri 17 Mar 2023 12:36:07 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
9739491
Fri 17 Mar 2023 12:40:35 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
8190056
Fri 17 Mar 2023 12:41:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
2fee169
Fri 17 Mar 2023 12:44:18 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
fb6a409
Fri 17 Mar 2023 12:49:11 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
0e40e69
